objects/PXS_Account_Team_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Feedback__c</fullName>
        <description>Additional Feedback on Proposal Expert Services</description>
        <label>Additional Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attributed_to_Bid_Mgmt_in_Closing__c</fullName>
        <description>Likelihood increased for Closing Deal using Proposal Expert  Services</description>
        <label>Attributed to Bid Mgmt in Closing Deal %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_hours_saved_using_Bid_Mgmt__c</fullName>
        <description>Average hours saved using Bid Management</description>
        <label>Average hours saved using Bid Mgmt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>PXS Account Feedback has master-detail relationship with Case object.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PXS Account Team Feedback</relationshipLabel>
        <relationshipName>PXS_Account_Team_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>NPS_Rating__c</fullName>
        <description>On a scale of 10 , how likely Cisco is recommend to a friend or Colleague</description>
        <label>NPS Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This field is used to store the Name of the user who provides the FSAT Survey feedback</description>
        <label>Name/User ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PXS_FSAT_Recommendation_Type__c</fullName>
        <description>This field is used to store Survey feedback for FSAT PXS . Calculation based below . 
1. 0-6 Range (Detractors) 
2. 7-8 Range (Passives)</description>
        <formula>IF(NPS_Rating__c &lt;&gt; '', 
IF(VALUE(NPS_Rating__c) &lt;= 6 , 'Detractors', 
IF(AND(VALUE(NPS_Rating__c) &gt;=7,VALUE(NPS_Rating__c) &lt;= 8), 'Passives', 
'Promoters')),'')</formula>
        <label>PXS FSAT Recommendation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_NPS_Rating__c</fullName>
        <description>Reason for selecting the NPS Rating</description>
        <label>Reason for NPS Rating</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reduction_in_Sales_Cycle_using_Bid_Mgmt__c</fullName>
        <description>Proposal EXpert Services reduce the duration in your typical sales cycle by weeks</description>
        <label>Reduction in Sales Cycle using Bid Mgmt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Satisfaction_level__c</fullName>
        <description>The service level satisfaction of the customer with Proposal Expert Services</description>
        <label>Service Satisfaction level</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Role__c</fullName>
        <description>This field is used to store the role of the person who submits the survey response</description>
        <label>Your Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PXS Account Team Feedback</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>PXS Account Team Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PXS Account Team Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>